# ocamlectron

./: LICENSE  Makefile  README.md  dune-project  ocamlectron.opam
.github/ISSUE_TEMPLATE/: missing-feature-from-the-electron-api.md
example/: app.ml  dune  index.html  main.ml  package-lock.json  package.json  run.sh
lib/: App.ml  App.mli  Binding.mli  Builtin.ml  Builtin.mli  Electron.mli  Optional.ml  Os.ml  Process.ml  Process.mli  Signal.mli  Struct.ml  Struct.mli  dune  index.mld
lib/binding/: App.mli  BrowserWindow.mli  Builtin.ml  Builtin.mli  CPUUsage.mli  ElectronMain.mli  Event.mli  EventEmitter.mli  IOCounters.mli  MemoryUsage.mli  Position.mli  PrinterInfo.mli  Process.mli  ProcessMemoryInfo.mli  Rectangle.mli  Release.mli  Size.mli  Struct.ml  Struct.mli  SystemMemoryInfo.mli  Task.mli  Versions.mli  WebContents.mli  dune
lib/common/: Event.ml  Event.mli  Optional.ml  Optional.mli  Process.ml  Process.mli  Signal.ml  Struct.mli  dune
lib/electron_api/: App.ml  App.mli  BrowserWindow.ml  BrowserWindow.mli  Event.ml  Event.mli  Optional.ml  Optional.mli  Os.ml  Os.mli  Process.ml  Process.mli  Tools.ml  Tools.mli  WebContents.ml  WebContents.mli  dune
lib/electron_main/: App.ml  App.mli  BrowserWindow.ml  BrowserWindow.mli  Constructor.mli  Electron.ml  Electron.mli  Make.ml  Make.mli  dune
lib/electron_plumbing/: App.mli  BrowserWindow.mli  Builtin.ml  Builtin.mli  CPUUsage.mli  ElectronMain.mli  Event.mli  EventEmitter.mli  IOCounters.mli  MemoryUsage.mli  Position.mli  PrinterInfo.mli  Process.mli  ProcessMemoryInfo.mli  Rectangle.mli  Referer.mli  Release.mli  Size.mli  Struct.ml  Struct.mli  SystemMemoryInfo.mli  Task.mli  Versions.mli  WebContents.mli  dune
lib/electron_render/: dune
lib/main/: App.ml  App.mli  BrowserWindow.ml  BrowserWindow.mli  Electron.ml  Electron.mli  dune
lib/render/: dune
